--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,27 @@
 .content {
   background-color: white;
   height: 100%;
-  width: 100%;
+  width: 80%;
   padding: 20px;
   position: relative;
   border: 2px dashed #bbb;
+  padding-left: 10%;
+  
 }
 
 .padding {
 
-  padding: 45px;
+  padding: 50px;
   width: :100%;
   height: 100%;
   position: relative;
   background-color: #f1f1f1;
+  
+
 }
 
 .border {
-padding: 45px;
+padding: 50px;
   width: :100%px;
   height: 100%;
   position: relative;
@@ -26,7 +30,7 @@ background-color: #4CAF50;
 }
 
 .margin {
-padding: 45px;
+padding: 50px;
   width: :100%;
   height: 100%;
   position: relative;
